syntax = "proto3";

package com.example.grpc.temperatureSensor;

option java_multiple_files = true;
option java_package = "com.example.grpc.temperatureSensor";
option java_outer_classname = "temperatureProto";

service TemperatureSensorConnection{
  // Unary RPC
  rpc getTemperatureConnection(TemperatureConnectionRequest) returns (TemperatureConnectionResponse);

  // Server-side streaming RPC
  rpc streamCurrentTemperature(StreamTemperatureRequest) returns (stream StreamTemperatureResponse);
}

message TemperatureConnectionRequest {
  int32 temperature = 1;
}

message TemperatureConnectionResponse {
  string message = 1;
}

message StreamTemperatureRequest {
  int32 temperature = 1;
}

message StreamTemperatureResponse {
  string message = 1;
  int32 temperature = 2;
}